<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity">

    <ImageView
        android:id="@+id/DAM_logo3"
        android:layout_width="87dp"
        android:layout_height="134dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/logo_dam_course"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/DAM_logo3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo_campus_igualada3"
        android:layout_width="0dp"
        android:layout_height="81dp"
        android:contentDescription="@string/logo_campus_igualada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/back" />

    <TextView
        android:id="@+id/TextView_label_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center_horizontal"
        android:text="@string/terms_and_conditions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DAM_logo3" />

    <Button
        android:id="@+id/button_accept"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView_label_terms" />

    <Button
        android:id="@+id/button_reject"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:text="@string/reject"
        app:layout_constraintBottom_toTopOf="@+id/logo_campus_igualada3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_accept"
        app:layout_constraintVertical_bias="0.037" />
</androidx.constraintlayout.widget.ConstraintLayout>